--- a/Quiz-web/src/main/resources/templates/quizResult.html
+++ b/Quiz-web/src/main/resources/templates/quizResult.html
@@ -26,7 +26,7 @@
                 <h2 th:text=${listQuiz.numberOfQuiz}></h2>
                 <hr>
                 <h2 style="text-align: center;"><b>Result</b></h2>
-                <h2 th:text="${'Your core (true/total): ' + true  + '/' + total} "></h2>
+                <h2 th:text="${'Your core (true/total): ' + count  + '/' + total} "></h2>
             </form>
         </div>
     </div>
